--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "craftzdog-homepage",
+  "name": "facta-homepage",
   "version": "1.0.0",
-  "description": "Takuya's website",
+  "description": "facta",
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
@@ -10,13 +10,15 @@
     "lint": "next lint"
   },
   "keywords": [],
-  "author": "Takuya Matsuyama",
+  "author": "facta",
   "license": "MIT",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
+    "@mui/material": "^6.1.1",
     "@vercel/analytics": "^1.1.1",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
